# clHello

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ccsharehello/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  How to include .so libraries.txt
app/src/main/cpp/: CMakeLists.txt  RGBConvertNv12Rotate.cpp  RGBConvertNv12Rotate.h  SetImageData.cpp  SetImageData.h  Singleton.h  Utility.cpp  Utility.h  YuvConvertOpenCl.cpp  YuvConvertOpenCl.h  YuvConvertOpencc.cpp  YuvConvertOpencc.h  YuvI420ToNV12Rotate.cpp  YuvI420ToNV12Rotate.h  cl_host_debug_kernel_fun.cpp  hello.cpp  hello.h  native-lib.cpp  native_ocl_i420nv12_lib.cpp
app/src/main/java/com/example/ccsharehello/: MainActivity.java
app/src/main/java/com/rubus/clhello/: MainActivity.java
app/src/main/libgit_yuv/: CMakeLists.txt
app/src/main/libgit_yuv/include/: yuvhello.h
app/src/main/libgit_yuv/source/: convert.cc
app/src/main/librk_yuv/libyuv/: CMakeLists.txt
app/src/main/libyuv/source/: rotate.cc  yuvhello.cc
app/src/main/prebuilt_arm/: Readme.txt
app/src/main/prebuilt_cc_libs/OpenCL/include/CL/: cl.h  cl.hpp  cl_ext.h  cl_gl.h  cl_gl_ext.h  opencl.h
app/src/main/prebuilt_cdx_ocl_cc_libs/OpenCL/include/CL/: Readme.txt  cl.h  cl.hpp  cl_ext.h  cl_gl.h  cl_gl_ext.h  opencl.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/ccsharehello/: ExampleUnitTest.java
app/src/test/java/com/rubus/clhello/: ExampleUnitTest.java
docs/: CODEOWNERS
tools/: Readme.txt  cl_out_nv12_1280x720.YUV  cl_out_nv12_1920x1080.YUV  files_from.txt  ph3027_gray_1280x720_i420.YUV  sakura_1280x720_i420.YUV  sakura_1280x720_nv12.YUV  uv-工作簿1.xlsx
